Add all functions

--- a/local.properties
+++ b/local.properties
@@ -6,3 +6,4 @@
 # header note.
 #Fri May 16 12:05:44 PDT 2025
 sdk.dir=/Users/sashalai/Library/Android/sdk
+OPEN_WEATHER_API_KEY=96eeb2f7e65ef6860699f7c65412c28b
